modificacion del Fronent

--- a/src/app/colombiana/colombiana.component.html
+++ b/src/app/colombiana/colombiana.component.html
@@ -16,16 +16,18 @@
 <div class="section-cards">
     <div class="wrapp-card">
         <div class="card">
-            <h1>Recipe 1</h1>
             <div>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt deserunt quos autem voluptate, corrupti a nobis ab sequi vero rerum, non magni animi laborum, ipsum dolorem aliquid voluptatibus velit. Libero.</p>
+                <img src="../../assets/paisa.png" alt="">
+                <h1>Bandeja Paisa</h1>
             </div>
+                <p>La Bandeja Paisa es un plato colombiano que representa la generosidad de la comida en la región de Antioquia. Esta abundante bandeja incluye arroz, carne molida, chicharrón (cerdo frito), chorizo, morcilla (salchicha de sangre), huevo frito, aguacate, plátano maduro y arepas. Todos estos elementos se sirven en un mismo plato, creando una combinación de sabores y texturas única. </p>
         </div>
         <div class="card">
-            <h1>Recipe 1</h1>
             <div>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt deserunt quos autem voluptate, corrupti a nobis ab sequi vero rerum, non magni animi laborum, ipsum dolorem aliquid voluptatibus velit. Libero.</p>
+                <img src="../../assets/ajiaco.png" alt="">
+                <h1>Ajiaco Bogotano</h1>
             </div>
+                <p>El Ajiaco Bogotano es una sopa espesa y reconfortante que proviene de la región de Bogotá. Se caracteriza por su base de caldo de pollo, papas criollas, mazorcas de maíz tierno, yerbabuena y guascas, una hierba típica colombiana. Se sirve con crema de leche, alcaparras y aguacate, lo que le da un sabor único y delicioso. El Ajiaco es perfecto para disfrutar en un día frío y es una representación de la rica tradición culinaria colombiana.</p>
         </div>
     </div>
 </div>
