--- a/src/app/francesa/francesa.component.html
+++ b/src/app/francesa/francesa.component.html
@@ -12,3 +12,22 @@
             Lo que hace que la comida francesa sea excepcional es su dedicación a la excelencia en cada detalle. Los ingredientes frescos y de alta calidad son la piedra angular de cada plato, y la selección de productos locales es fundamental para la cocina francesa. Desde el queso camembert de Normandía hasta el vino tinto de Borgoña, Francia celebra la riqueza de sus regiones y la diversidad de sus sabores.</p>
     </div>
 </section>
+
+<div class="section-cards">
+    <div class="wrapp-card">
+        <div class="card">
+            <div>
+                <img src="../../assets/ratatouille.jpg" alt="">
+                <h1>ratatouille</h1>
+            </div>
+                <p>Ratatouille es una receta provenzal de vegetales asados que destaca la frescura y los sabores naturales de los ingredientes. Se prepara con berenjenas, calabacines, pimientos, tomates, cebolla y ajo, todos cortados en rodajas finas y cocidos lentamente en aceite de oliva con hierbas aromáticas como el tomillo y el romero. El resultado es un plato vegano y saludable que puede servirse como guarnición o como plato principal acompañado de arroz o pasta.</p>
+        </div>
+        <div class="card">
+            <div>
+                <img src="../../assets/Crepes Suzette.jpg" alt="">
+                <h1>Crepes Suzette</h1>
+            </div>
+                <p>El risotto es un plato italiano de arroz cremoso que se cocina lentamente con caldo y otros ingredientes. Para hacer un risotto de champiñones, se saltean champiñones frescos con cebolla y ajo en mantequilla y aceite de oliva. Luego se añade arroz arborio y se cocina con caldo de pollo o vegetal, revolviendo constantemente hasta que el arroz esté tierno y haya absorbido el caldo. Se termina con queso parmesano rallado y perejil fresco. El risotto de champiñones es un plato cremoso y lleno de sabor que destaca la simplicidad y la elegancia de la cocina italiana.</p>
+        </div>
+    </div>
+</div>
