--- a/src/app/italiana/italiana.component.html
+++ b/src/app/italiana/italiana.component.html
@@ -13,3 +13,22 @@
             Lo que distingue a la comida italiana es su enfoque en la frescura y la autenticidad de los ingredientes. Desde el tomate san Marzano hasta el aceite de oliva virgen extra, la comida italiana se basa en la calidad de los productos locales. La pasta fresca, las hierbas aromáticas y los quesos artesanales son el alma de muchas de sus recetas icónicas.</p>
     </div>
 </section>
+
+<div class="section-cards">
+    <div class="wrapp-card">
+        <div class="card">
+            <div>
+                <img src="../../assets/lasagna.jpg" alt="">
+                <h1>Lasagna</h1>
+            </div>
+                <p>La lasaña es un platillo italiano clásico que consiste en capas de láminas de pasta intercaladas con una mezcla de carne (generalmente carne de res molida, cerdo y ternera), salsa de tomate, queso ricotta, mozzarella y parmesano. Las capas se cocinan en el horno hasta que estén doradas y burbujeantes. La lasaña es conocida por su sabor reconfortante y su textura cremosa. Se sirve caliente y es un plato perfecto para ocasiones especiales o comidas familiares.</p>
+        </div>
+        <div class="card">
+            <div>
+                <img src="../../assets/risoto-with-chanterelle-mushrooms-in-large-plate-2021-08-27-16-37-01-utc.jpg" alt="">
+                <h1>Risotto de Champiñones</h1>
+            </div>
+                <p>El risotto es un plato italiano de arroz cremoso que se cocina lentamente con caldo y otros ingredientes. Para hacer un risotto de champiñones, se saltean champiñones frescos con cebolla y ajo en mantequilla y aceite de oliva. Luego se añade arroz arborio y se cocina con caldo de pollo o vegetal, revolviendo constantemente hasta que el arroz esté tierno y haya absorbido el caldo. Se termina con queso parmesano rallado y perejil fresco.</p>
+        </div>
+    </div>
+</div>
