--- a/src/app/japonesa/japonesa.component.html
+++ b/src/app/japonesa/japonesa.component.html
@@ -13,3 +13,22 @@
             Lo que distingue a la gastronomía japonesa es su profundo enfoque en la calidad de los ingredientes. Desde el pescado fresco hasta el arroz de alta calidad, Japón se enorgullece de utilizar productos frescos y locales. Cada bocado es una experiencia que rinde homenaje a la naturaleza y la estación del año.</p>
     </div>
 </section>
+
+<div class="section-cards">
+    <div class="wrapp-card">
+        <div class="card">
+            <div>
+                <img src="../../assets/sushi.jpg" alt="">
+                <h1>Sushi de Salmón</h1>
+            </div>
+                <p>El sushi de salmón es una deliciosa especialidad japonesa que combina arroz de sushi sazonado con vinagre, tiras de salmón fresco y otros ingredientes como aguacate y pepino. Todo se enrolla en una hoja de alga nori y se corta en pequeñas porciones. Se sirve con salsa de soja, wasabi y jengibre encurtido. El sushi de salmón es un plato icónico de la cocina japonesa, conocido por su frescura y elegancia.</p>
+        </div>
+        <div class="card">
+            <div>
+                <img src="../../assets/tempura.jpg" alt="">
+                <h1>Tempura de Verduras y Mariscos</h1>
+            </div>
+                <p>El tempura es un plato japonés que consiste en sumergir verduras y mariscos en una masa ligera de harina de trigo y agua helada, y luego freírlos hasta que queden crujientes y dorados. Los ingredientes más comunes para el tempura incluyen camarones, calabacines, berenjenas y champiñones. Se sirve con una salsa de sumiso (salsa de soja dulce) o sal para mojar. El tempura es conocido por su textura crujiente y su sabor delicado.</p>
+        </div>
+    </div>
+</div>
