--- a/src/app/mexicana/mexicana.component.html
+++ b/src/app/mexicana/mexicana.component.html
@@ -9,6 +9,25 @@
         </div>
         <p>La comida mexicana es una de las cocinas más vibrantes, sabrosas y reconocidas en todo el mundo, y su legado se enraíza profundamente en la historia de México. Esta rica herencia culinaria se remonta a civilizaciones antiguas como los aztecas y los mayas, quienes cultivaban una amplia variedad de ingredientes que siguen siendo fundamentales en la cocina mexicana actual.
 
-            La gastronomía mexicana es una apasionante fusión de tradición, sabor y diversidad. La influencia indígena se manifiesta en ingredientes como el maíz, los chiles, los frijoles y el cacao, que eran pilares de la dieta ancestral y que todavía desempeñan un papel destacado en la cocina contemporánea.</p>
+        La gastronomía mexicana es una apasionante fusión de tradición, sabor y diversidad. La influencia indígena se manifiesta en ingredientes como el maíz, los chiles, los frijoles y el cacao, que eran pilares de la dieta ancestral y que todavía desempeñan un papel destacado en la cocina contemporánea.</p>
     </div>
 </section>
+
+<div class="section-cards">
+    <div class="wrapp-card">
+        <div class="card">
+            <div>
+                <img src="../../assets/Tacos al Pastor.jpg" alt="">
+                <h1>Tacos al Pastor</h1>
+            </div>
+                <p>Los tacos al pastor son una deliciosa especialidad mexicana que combina sabores de la cocina árabe con ingredientes locales. Se preparan con carne de cerdo marinada en una mezcla de chiles secos, achiote, ajo, vinagre y especias. La carne se cocina en un trompo vertical y se corta en tiras finas. Los tacos se sirven en tortillas de maíz y se acompañan con cebolla, cilantro, piña y una salsa picante.</p>
+        </div>
+        <div class="card">
+            <div>
+                <img src="../../assets/Mole Poblano.jpg" alt="">
+                <h1>Mole Poblano</h1>
+            </div>
+                <p>El mole poblano es uno de los platos más icónicos de la cocina mexicana. Se trata de una salsa espesa y rica que combina chiles secos, chocolate, almendras, especias y otros ingredientes. Esta salsa se sirve tradicionalmente sobre pollo o pavo, aunque también se puede encontrar en otras preparaciones. El mole poblano es un plato complejo y sofisticado que ofrece una combinación única de sabores dulces y picantes. Se sirve con arroz y tortillas calientes. </p>
+        </div>
+    </div>
+</div>
