--- a/src/app/colombiana/colombiana.component.css
+++ b/src/app/colombiana/colombiana.component.css
@@ -20,7 +20,7 @@
 
 section {
   display: flex;
-  padding: 6em;
+  padding: 4em 3em;
   flex-direction: column;
   justify-content: center;  
   align-items: center;
@@ -32,7 +32,7 @@ section {
   max-width: 70%;
   font-family:"Poppins", Helvetica, sans-serif;
   font-size: larger;
-  color: #323232;
+  color: #ffffff;
 }
 
 .description > div h2{
@@ -50,7 +50,7 @@ section {
   font-size: calc(0.3rem + .9vw);
   line-height: 1.7;
   font-family: "Poppins", Helvetica, sans-serif;
-  color: #444;
+  color: #ffffff;
 }
 
 .section-cards {
@@ -60,9 +60,8 @@ section {
   justify-content: center;  
   align-items: center;
   text-align: center;
-  background-image: url('../../assets/fondo.jpg');
-  padding-bottom: 4em;
-
+  background-image: url('../../assets/fondo.jpg'); 
+  padding: 4em;
 }
 
 .wrapp-card{
@@ -75,20 +74,39 @@ section {
 
 .card{
   display: flex;
-  flex-direction: column;
-  width: 15em;
+  width: 60%;
+  max-height: 394px;
   height:fit-content;
-  padding: 2em;
+  justify-content: center;
+  align-items: center;
   font-family: "Poppins", Helvetica, sans-serif;
-  background-color: #d0d765;
-  box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
-  border-radius: 15px;
+  background-color: #ffffff;
+  box-shadow: 0px 0px 40px 0px rgba(0,0,0,0.1);
+  border: 1px solid rgba(0, 0, 0, 0.088);
 }
 
-.card h1{
-  text-align: left;
+.card div{
+  border-right: 2px solid rgba(0, 0, 0, 0.072);
+  padding: 0em 2em;
+  padding-bottom: 3em;
 }
 
-.card > div p{
-  text-align: justify;
+.card > div h1{
+  text-align: center;
+  font-size: 23px;
+  margin: 0;
+  color: rgb(80, 80, 80);
+}
+.card > div img{
+ width: 300px;
+}
+
+.card p{
+  text-align: center;
+  font-size: calc(0.1rem + .8vw);
+  font-weight: 500;
+  line-height: 1.7;
+  padding: 2em;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #4e4e4e;
 }
