--- a/src/app/japonesa/japonesa.component.css
+++ b/src/app/japonesa/japonesa.component.css
@@ -20,6 +20,7 @@
 
   section {
     display: flex;
+    padding: 4em 3em;
     flex-direction: column;
     justify-content: center;  
     align-items: center;
@@ -28,11 +29,10 @@
   }
   
   .description {
-    padding: 6em;
-    max-width: 50%;
+    max-width: 70%;
     font-family:"Poppins", Helvetica, sans-serif;
     font-size: larger;
-    color: #323232;
+    color: #ffffff;
   }
   
   .description > div h2{
@@ -41,14 +41,75 @@
     margin: 0;
   }
   
-  .description > div p{  
-      margin-bottom: 2.2em;
+  .description > div p{ 
+    font-size: calc(0.9rem + .9vw);
+    margin-bottom: 2.2em;
   }
   
   .description > p{
-      font-size: 0.875rem;
-      line-height: 1.7;
-      font-family: "Poppins", Helvetica, sans-serif;
-      color: #444;
+    font-size: calc(0.3rem + .9vw);
+    line-height: 1.7;
+    font-family: "Poppins", Helvetica, sans-serif;
+    color: #ffffff;
+  }
+
+  .section-cards {
+    display: flex;
+    padding: 1em;
+    flex-direction: column;
+    justify-content: center;  
+    align-items: center;
+    text-align: center;
+    background-image: url('../../assets/fondo.jpg'); 
+    padding: 4em;
+  }
+  
+  .wrapp-card{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 5em;
+  }
+  
+  .card{
+    display: flex;
+    width: 60%;
+    max-height: 394px;
+    height:fit-content;
+    justify-content: center;
+    align-items: center;
+    font-family: "Poppins", Helvetica, sans-serif;
+    background-color: #ffffff;
+    box-shadow: 0px 0px 40px 0px rgba(0,0,0,0.1);
+    border: 1px solid rgba(0, 0, 0, 0.088);
+  }
+  
+  .card div{
+    border-right: 2px solid rgba(0, 0, 0, 0.072);
+    padding: 0em 2em;
+    padding-bottom: 3em;
+  }
+  
+  .card > div h1{
+    text-align: center;
+    font-size: 20px;
+    margin: 0;
+    color: rgb(80, 80, 80);
+  }
+  .card > div img{
+   width: 250px;
+   padding: 1em;
+   border-radius: 50%;
+  }
+  
+  .card p{
+    text-align: center;
+    font-size: calc(0.1rem + .8vw);
+    font-weight: 500;
+    line-height: 1.7;
+    padding: 2em;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #4e4e4e;
   }
   
