--- a/src/app/colombiana/colombiana.component.html
+++ b/src/app/colombiana/colombiana.component.html
@@ -10,8 +10,18 @@
         <p>La comida colombiana es una muestra fascinante de la diversidad geográfica y cultural de este hermoso país sudamericano. Desde las playas del Caribe hasta las montañas de los Andes y las llanuras de la región amazónica, Colombia ofrece una variedad de ingredientes frescos y únicos que enriquecen su cocina.
 
             Esta rica tradición culinaria se teje con influencias indígenas, africanas y europeas que han dejado una profunda huella en cada plato. Los sabores indígenas aportan ingredientes como el maíz, la yuca y los ajíes picantes, que dan vida a platos emblemáticos como la arepa y el sancocho. Las influencias africanas se manifiestan en la utilización de ingredientes como el plátano y el coco, que se fusionan en delicias como el arroz con coco y pescado.</p>
+            
     </div>
 </section>
+<ul>
+        <strong>Restaurante: </strong>La Candelaria Restaurante
+        <ul>
+            <li><strong>Ubicación: </strong>Bogotá, Colombia</li>
+            <li><strong>Estrellas Michelin: </strong>No aplica</li>
+            <li><strong>Culturas Gastronómicas Representadas: </strong>Colombiana</li>
+            <li><strong>Menú Destacado: </strong>Bandeja Paisa, Arepas</li>
+        </ul>
+</ul>
 
 <div class="section-cards">
     <div class="wrapp-card">
