--- a/src/app/francesa/francesa.component.html
+++ b/src/app/francesa/francesa.component.html
@@ -12,7 +12,15 @@
             Lo que hace que la comida francesa sea excepcional es su dedicación a la excelencia en cada detalle. Los ingredientes frescos y de alta calidad son la piedra angular de cada plato, y la selección de productos locales es fundamental para la cocina francesa. Desde el queso camembert de Normandía hasta el vino tinto de Borgoña, Francia celebra la riqueza de sus regiones y la diversidad de sus sabores.</p>
     </div>
 </section>
-
+<ul>
+        <strong>Restaurante: </strong>Le Petit Bistro
+        <ul>
+            <li><strong>Ubicación: </strong>París, Francia</li>
+            <li><strong>Estrellas Michelin: </strong>1 estrella (Fecha de Consecución: 2021)</li>
+            <li><strong>Culturas Gastronómicas Representadas: </strong>Francesa</li>
+            <li><strong>Menú Destacado: </strong>Coq au Vin, Baguette</li>
+        </ul>
+</ul>
 <div class="section-cards">
     <div class="wrapp-card">
         <div class="card">
