--- a/src/app/italiana/italiana.component.html
+++ b/src/app/italiana/italiana.component.html
@@ -13,7 +13,16 @@
             Lo que distingue a la comida italiana es su enfoque en la frescura y la autenticidad de los ingredientes. Desde el tomate san Marzano hasta el aceite de oliva virgen extra, la comida italiana se basa en la calidad de los productos locales. La pasta fresca, las hierbas aromáticas y los quesos artesanales son el alma de muchas de sus recetas icónicas.</p>
     </div>
 </section>
-
+<ul>
+    
+        <strong>Restaurante: </strong>Trattoria Da Vinci
+        <ul>
+            <li><strong>Ubicación: </strong>Roma, Italia</li>
+            <li><strong>Estrellas Michelin: </strong>2 estrellas (Fecha de Consecución: 2020)</li>
+            <li><strong>Culturas Gastronómicas Representadas: </strong>Italiana</li>
+            <li><strong>Menú Destacado: </strong>Pasta Carbonara, Lasagna Bolognese, Tiramisú</li>
+        </ul>
+</ul>
 <div class="section-cards">
     <div class="wrapp-card">
         <div class="card">
