--- a/src/app/mexicana/mexicana.component.html
+++ b/src/app/mexicana/mexicana.component.html
@@ -12,7 +12,15 @@
         La gastronomía mexicana es una apasionante fusión de tradición, sabor y diversidad. La influencia indígena se manifiesta en ingredientes como el maíz, los chiles, los frijoles y el cacao, que eran pilares de la dieta ancestral y que todavía desempeñan un papel destacado en la cocina contemporánea.</p>
     </div>
 </section>
-
+<ul>
+        <strong>Restaurante: </strong>El Sabor de México
+        <ul>
+            <li><strong>Ubicación: </strong>Ciudad de México, México</li>
+            <li><strong>Estrellas Michelin: </strong>1 estrella (Fecha de Consecución: 2021)</li>
+            <li><strong>Culturas Gastronómicas Representadas: </strong>Mexicana</li>
+            <li><strong>Menú Destacado: </strong>Tacos al Pastor, Guacamole, Tamales</li>
+        </ul>
+</ul>
 <div class="section-cards">
     <div class="wrapp-card">
         <div class="card">
