--- a/src/app/colombiana/colombiana.component.html
+++ b/src/app/colombiana/colombiana.component.html
@@ -11,19 +11,10 @@
 
             Esta rica tradición culinaria se teje con influencias indígenas, africanas y europeas que han dejado una profunda huella en cada plato. Los sabores indígenas aportan ingredientes como el maíz, la yuca y los ajíes picantes, que dan vida a platos emblemáticos como la arepa y el sancocho. Las influencias africanas se manifiestan en la utilización de ingredientes como el plátano y el coco, que se fusionan en delicias como el arroz con coco y pescado.</p>
             
-    </div>
-</section>
-<ul>
-        <strong>Restaurante: </strong>La Candelaria Restaurante
-        <ul>
-            <li><strong>Ubicación: </strong>Bogotá, Colombia</li>
-            <li><strong>Estrellas Michelin: </strong>No aplica</li>
-            <li><strong>Culturas Gastronómicas Representadas: </strong>Colombiana</li>
-            <li><strong>Menú Destacado: </strong>Bandeja Paisa, Arepas</li>
-        </ul>
-</ul>
-
-<div class="section-cards">
+        </div>
+    </section>
+    
+    <div class="section-cards">
     <div class="wrapp-card">
         <div class="card">
             <div>
@@ -40,4 +31,13 @@
                 <p>El Ajiaco Bogotano es una sopa espesa y reconfortante que proviene de la región de Bogotá. Se caracteriza por su base de caldo de pollo, papas criollas, mazorcas de maíz tierno, yerbabuena y guascas, una hierba típica colombiana. Se sirve con crema de leche, alcaparras y aguacate, lo que le da un sabor único y delicioso. El Ajiaco es perfecto para disfrutar en un día frío y es una representación de la rica tradición culinaria colombiana.</p>
         </div>
     </div>
+</div>
+<div class="restaurante">
+        <h1>Restaurante: </h1>La Candelaria Restaurante
+        <ul>
+            <li><strong>Ubicación: </strong>Bogotá, Colombia</li>
+            <li><strong>Estrellas Michelin: </strong>No aplica</li>
+            <li><strong>Culturas Gastronómicas Representadas: </strong>Colombiana</li>
+            <li><strong>Menú Destacado: </strong>Bandeja Paisa, Arepas</li>
+        </ul>
 </div>
