--- a/src/app/francesa/francesa.component.html
+++ b/src/app/francesa/francesa.component.html
@@ -12,15 +12,7 @@
             Lo que hace que la comida francesa sea excepcional es su dedicación a la excelencia en cada detalle. Los ingredientes frescos y de alta calidad son la piedra angular de cada plato, y la selección de productos locales es fundamental para la cocina francesa. Desde el queso camembert de Normandía hasta el vino tinto de Borgoña, Francia celebra la riqueza de sus regiones y la diversidad de sus sabores.</p>
     </div>
 </section>
-<ul>
-        <strong>Restaurante: </strong>Le Petit Bistro
-        <ul>
-            <li><strong>Ubicación: </strong>París, Francia</li>
-            <li><strong>Estrellas Michelin: </strong>1 estrella (Fecha de Consecución: 2021)</li>
-            <li><strong>Culturas Gastronómicas Representadas: </strong>Francesa</li>
-            <li><strong>Menú Destacado: </strong>Coq au Vin, Baguette</li>
-        </ul>
-</ul>
+
 <div class="section-cards">
     <div class="wrapp-card">
         <div class="card">
@@ -38,4 +30,14 @@
                 <p>El risotto es un plato italiano de arroz cremoso que se cocina lentamente con caldo y otros ingredientes. Para hacer un risotto de champiñones, se saltean champiñones frescos con cebolla y ajo en mantequilla y aceite de oliva. Luego se añade arroz arborio y se cocina con caldo de pollo o vegetal, revolviendo constantemente hasta que el arroz esté tierno y haya absorbido el caldo. Se termina con queso parmesano rallado y perejil fresco. El risotto de champiñones es un plato cremoso y lleno de sabor que destaca la simplicidad y la elegancia de la cocina italiana.</p>
         </div>
     </div>
+</div>
+<div class="restaurante">
+ 
+        <h1>Restaurante: </h1>Le Petit Bistro
+        <ul>
+            <li><strong>Ubicación: </strong>París, Francia</li>
+            <li><strong>Estrellas Michelin: </strong>1 estrella (Fecha de Consecución: 2021)</li>
+            <li><strong>Culturas Gastronómicas Representadas: </strong>Francesa</li>
+            <li><strong>Menú Destacado: </strong>Coq au Vin, Baguette</li>
+        </ul>
 </div>
