--- a/src/app/japonesa/japonesa.component.html
+++ b/src/app/japonesa/japonesa.component.html
@@ -13,15 +13,7 @@
             Lo que distingue a la gastronomía japonesa es su profundo enfoque en la calidad de los ingredientes. Desde el pescado fresco hasta el arroz de alta calidad, Japón se enorgullece de utilizar productos frescos y locales. Cada bocado es una experiencia que rinde homenaje a la naturaleza y la estación del año.</p>
     </div>
 </section>
-<ul>
-        <strong>Restaurante: </strong>Sushi Zen
-        <ul>
-            <li><strong>Ubicación: </strong>Tokio, Japón</li>
-            <li><strong>Estrellas Michelin: </strong>3 estrellas (Fecha de Consecución: 2022)</li>
-            <li><strong>Culturas Gastronómicas Representadas: </strong>Japonesa</li>
-            <li><strong>Menú Destacado: </strong>Sushi Nigiri, Sashimi, Tempura</li>
-        </ul>
-</ul>
+
 <div class="section-cards">
     <div class="wrapp-card">
         <div class="card">
@@ -39,4 +31,13 @@
                 <p>El tempura es un plato japonés que consiste en sumergir verduras y mariscos en una masa ligera de harina de trigo y agua helada, y luego freírlos hasta que queden crujientes y dorados. Los ingredientes más comunes para el tempura incluyen camarones, calabacines, berenjenas y champiñones. Se sirve con una salsa de sumiso (salsa de soja dulce) o sal para mojar. El tempura es conocido por su textura crujiente y su sabor delicado.</p>
         </div>
     </div>
+</div>
+<div class="restaurante">
+        <h1>Restaurante: </h1>Sushi Zen
+        <ul>
+            <li><strong>Ubicación: </strong>Tokio, Japón</li>
+            <li><strong>Estrellas Michelin: </strong>3 estrellas (Fecha de Consecución: 2022)</li>
+            <li><strong>Culturas Gastronómicas Representadas: </strong>Japonesa</li>
+            <li><strong>Menú Destacado: </strong>Sushi Nigiri, Sashimi, Tempura</li>
+        </ul>
 </div>
