--- a/src/app/mexicana/mexicana.component.html
+++ b/src/app/mexicana/mexicana.component.html
@@ -12,15 +12,7 @@
         La gastronomía mexicana es una apasionante fusión de tradición, sabor y diversidad. La influencia indígena se manifiesta en ingredientes como el maíz, los chiles, los frijoles y el cacao, que eran pilares de la dieta ancestral y que todavía desempeñan un papel destacado en la cocina contemporánea.</p>
     </div>
 </section>
-<ul>
-        <strong>Restaurante: </strong>El Sabor de México
-        <ul>
-            <li><strong>Ubicación: </strong>Ciudad de México, México</li>
-            <li><strong>Estrellas Michelin: </strong>1 estrella (Fecha de Consecución: 2021)</li>
-            <li><strong>Culturas Gastronómicas Representadas: </strong>Mexicana</li>
-            <li><strong>Menú Destacado: </strong>Tacos al Pastor, Guacamole, Tamales</li>
-        </ul>
-</ul>
+
 <div class="section-cards">
     <div class="wrapp-card">
         <div class="card">
@@ -38,4 +30,14 @@
                 <p>El mole poblano es uno de los platos más icónicos de la cocina mexicana. Se trata de una salsa espesa y rica que combina chiles secos, chocolate, almendras, especias y otros ingredientes. Esta salsa se sirve tradicionalmente sobre pollo o pavo, aunque también se puede encontrar en otras preparaciones. El mole poblano es un plato complejo y sofisticado que ofrece una combinación única de sabores dulces y picantes. Se sirve con arroz y tortillas calientes. </p>
         </div>
     </div>
+</div>
+<div class="restaurante">
+        <h1>Restaurante: </h1>El Sabor de México
+        <ul>
+            <li><strong>Ubicación: </strong>Ciudad de México, México</li>
+            <li><strong>Estrellas Michelin: </strong>1 estrella (Fecha de Consecución: 2021)</li>
+            <li><strong>Culturas Gastronómicas Representadas: </strong>Mexicana</li>
+            <li><strong>Menú Destacado: </strong>Tacos al Pastor, Guacamole, Tamales</li>
+        </ul>
+
 </div>
