--- a/src/app/italiana/italiana.component.html
+++ b/src/app/italiana/italiana.component.html
@@ -13,16 +13,7 @@
             Lo que distingue a la comida italiana es su enfoque en la frescura y la autenticidad de los ingredientes. Desde el tomate san Marzano hasta el aceite de oliva virgen extra, la comida italiana se basa en la calidad de los productos locales. La pasta fresca, las hierbas aromáticas y los quesos artesanales son el alma de muchas de sus recetas icónicas.</p>
     </div>
 </section>
-<ul>
-    
-        <strong>Restaurante: </strong>Trattoria Da Vinci
-        <ul>
-            <li><strong>Ubicación: </strong>Roma, Italia</li>
-            <li><strong>Estrellas Michelin: </strong>2 estrellas (Fecha de Consecución: 2020)</li>
-            <li><strong>Culturas Gastronómicas Representadas: </strong>Italiana</li>
-            <li><strong>Menú Destacado: </strong>Pasta Carbonara, Lasagna Bolognese, Tiramisú</li>
-        </ul>
-</ul>
+
 <div class="section-cards">
     <div class="wrapp-card">
         <div class="card">
@@ -40,4 +31,14 @@
                 <p>El risotto es un plato italiano de arroz cremoso que se cocina lentamente con caldo y otros ingredientes. Para hacer un risotto de champiñones, se saltean champiñones frescos con cebolla y ajo en mantequilla y aceite de oliva. Luego se añade arroz arborio y se cocina con caldo de pollo o vegetal, revolviendo constantemente hasta que el arroz esté tierno y haya absorbido el caldo. Se termina con queso parmesano rallado y perejil fresco.</p>
         </div>
     </div>
+</div>
+<div class="restaurante">
+    
+        <h1>Restaurante: </h1>Trattoria Da Vinci
+        <ul>
+            <li><strong>Ubicación: </strong>Roma, Italia</li>
+            <li><strong>Estrellas Michelin: </strong>2 estrellas (Fecha de Consecución: 2020)</li>
+            <li><strong>Culturas Gastronómicas Representadas: </strong>Italiana</li>
+            <li><strong>Menú Destacado: </strong>Pasta Carbonara, Lasagna Bolognese, Tiramisú</li>
+        </ul>
 </div>
