--- a/src/app/mexicana/mexicana.component.css
+++ b/src/app/mexicana/mexicana.component.css
@@ -112,6 +112,15 @@
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: #4e4e4e;
   }
-  
+  .restaurante{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: left;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding-bottom: 3em;
+    padding-top: 2em;
+  }
   
   
